# apotheosis-py

./: LICENSE  main.py  pyproject.toml
src/: config.py  dto.py  error.py
src/domain/: ai_chat_domain.py
src/effects/: mention_effect.py
src/network/: open_ai_network.py
