[tool.poetry]
name = "apotheosis-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "apotheosis_py"}]

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.1"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
